better handling of image uploading with rest API
